@@ -13,7 +13,7 @@ export(fitMod, defBnds, bFitMod, MCTtest, bMCTtest, MCPMod,
        betaModGrad, quadraticGrad, emaxGrad, exponentialGrad,
        linearGrad, linlogGrad, logisticGrad, sigEmaxGrad, linIntGrad,
        Mods, getResp, TD, ED, plotMods,
-       guesst, MCTtest, MCTpval, gAIC,
+       guesst, MCTtest, MCTpval, critVal, mvpostmix, gAIC,
        mvtnorm.control, 
        optContr, plotContr,
        powMCT, sampSize, sampSizeMCT, targN, powN, planMod,
